Fix redirect host check bypass (issue 3747)